fix(styling): fixed layout shift on textfield feedback

--- a/next-tavla/src/Admin/scenarios/Organizations/components/MemberAdministration/styles.module.css
+++ b/next-tavla/src/Admin/scenarios/Organizations/components/MemberAdministration/styles.module.css
@@ -10,3 +10,9 @@
     padding: 0.5rem 0;
     border-bottom: 2px solid var(--table-border-color);
 }
+
+.inviteForm {
+    display: flex;
+    gap: 0.5em;
+    height: 4rem;
+}
